# edg

./: .gitignore  hello.py  pyproject.toml
src/: 2Dfunc_vae.py  MNIST_vae.py  a.py  model.py  myvae.py  test.py  vae.py
src/energyfunction/: MoG2.py  MoG9.py  MoG9_hassan.py  ring.py  ring5.py
