[project]
name = "edg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "matplotlib>=3.10.0",
    "mypy>=1.14.1",
    "numpy>=2.2.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
]
